Added FPGA ToolchainCommander

--- a/src/LogisimFX/resources/localization/fpga.properties
+++ b/src/LogisimFX/resources/localization/fpga.properties
@@ -203,6 +203,7 @@ FpgaBoardOverlap = Found Overlapping regions! Cannot process!
 #
 # gui/BoardPainter.java
 #
+BoardMapConstantTitle = Constant:
 BoardMapConstant = Constant %s
 BoardMapOpen = Unconnected
 BoardMapValue = value
@@ -213,6 +214,10 @@ BoardPainterMsg3 = %s x %s pixels (width x height)
 BoardPainterMsg4 = for best graphical display.
 BoardPainterMsg5 = The board picture format must be PNG
 BoardPainterMsg6 = Current resolution: %s x %s
+BoardMapConst = Constant
+BoardMapConstantOne = Constant 1
+BoardMapConstantZero = Constant 0
+BoardMapConstantUnconnected = Unconnected
 #
 # gui/ComponentMapDialog.java
 #
@@ -242,7 +247,6 @@ FpgaGuiAnnotationDone = Annotation done
 FpgaGuiAnnotationMethod = Annotation method
 FpgaGuiBoardSelect = Target board
 FpgaGuiDownload = Download only
-FpgaGuiExecute = Execute
 FpgaGuiExecution = Action method
 FpgaGuiHdlOnly = Generate HDL only
 FpgaGuiIdle = Idle
@@ -383,3 +387,34 @@ boardConstrainsFileNotExist = constrains file doesn't exist
 boardConstrainsFileEmpty = constrains file is empty
 fileGeneratedFromSchematics = %s verilog model generated from schematics
 fileGeneratedFromVerilogModel = %s uses user define verilog model
+
+dockerImage = 1. Docker image
+targetBoard = 2. Target board
+constrainsFile = 3. Constrains file
+clockSettings = 4. Clock settings
+annotation = 5. Annotation
+action = 6. Action relative to toplevel
+
+openIOMapper = Open IO Mapper
+openConstrainsFile = Edit constrains file
+
+constrainsCheckBox = Auto generate constrains file
+toplevelCheckBox = Auto generate TopLevel file
+
+fpgaExportFilesItem=Export verilog files
+fpgaGenerateBitFile=Generate .bit file
+
+commanderTitle = LogisimFX - FPGA toolchain commander
+
+dockerInfoHeader=About LogisimFX FPGA pipline
+dockerInfoBody=To generate binary files, the open source project f4pga is used, which is assembled into a docker container.\nAccordingly, for generation .bat files on the machine must have an environment for the docker and a container.\nThe original container, assembled specifically for LogisimFX, can be found on docker hub : pe3atejlb/logisimfx-f4pga.\nNo one forbids using custom containers for assembly, however, in this case, LogifimFX will not be able to take over most of the routine operations.\nYou will have to manage the exported files yourself.\nFor this, you are provided with a built-in terminal.
+
+
+FpgaGuiExecute = Execute
+FpgaGuiExecute1 = Execute
+FpgaGuiExecute2 = Execute
+FpgaGuiExecute3 = Execute
+FpgaGuiExecute4 = Execute
+FpgaGuiExecute5 = Execute
+
+mapFilter = IO map
