--- a/src/LogisimFX/resources/localization/fpga_ru.properties
+++ b/src/LogisimFX/resources/localization/fpga_ru.properties
@@ -162,7 +162,7 @@ XilinxUsbTmcError = Не удалось загрузить через USBTMC
 #
 # gui/BoardEditor.java
 #
-# ==> FpgaBoardCancel =
+FpgaBoardCancel = Отмена
 FPGABoardEditor = Редактор платы FPGA
 # ==> FpgaBoardFpgaParam =
 # ==> FpgaBoardLoadExternal =
@@ -178,14 +178,15 @@ FPGABoardEditor = Редактор платы FPGA
 # ==> BoardManipLoad =
 # ==> BoardManipLoadError =
 # ==> BoardManipLoadPng =
-# ==> BoardMapRelAll =
-# ==> BoardMapRelease =
-# ==> FpgaBoardOverlap =
+BoardMapRelAll = Очистить все сопоставления
+BoardMapRelease = Очистить сопоставление компонента
+FpgaBoardOverlap = Очистить все сопоставления
 #
 # gui/BoardPainter.java
 #
-# ==> BoardMapConstant =
-# ==> BoardMapOpen =
+BoardMapConstantTitle = Константы:
+BoardMapConstant = Константа %s
+BoardMapOpen = Не подключать
 # ==> BoardMapValue =
 # ==> BoardPainterError =
 # ==> BoardPainterMsg1 =
@@ -194,16 +195,19 @@ FPGABoardEditor = Редактор платы FPGA
 # ==> BoardPainterMsg4 =
 # ==> BoardPainterMsg5 =
 # ==> BoardPainterMsg6 =
+BoardMapConstantOne = Константа 1
+BoardMapConstantZero = Константа 0
+BoardMapConstantUnconnected = Не подключать
 #
 # gui/ComponentMapDialog.java
 #
-# ==> BoardMapActions =
-# ==> BoardMapLoad =
-# ==> BoardMapMapped =
-# ==> BoardMapSave =
-# ==> BoardMapTitle =
+BoardMapActions = Действия:
+BoardMapLoad = Загрузить карту сопоставлений
+BoardMapMapped = Сопоставленные компоненты
+BoardMapSave = Сохранить карту сопоставлений
+BoardMapTitle = LogisimFX: сопоставление  IO компонентов
 # ==> BoardMapUMTooltip =
-# ==> BoardMapUnmapped =
+BoardMapUnmapped = Несопоставленные компоненты
 # ==> BoarMapFileSaved =
 #
 # gui/DialogNotification.java
@@ -212,25 +216,23 @@ FPGABoardEditor = Редактор платы FPGA
 #
 # gui/FPGAClockPanel.java
 #
-# ==> FpgaFreqDivider =
-# ==> FpgaFreqFrequency =
+FpgaFreqDivider = Делитель частоты
+FpgaFreqFrequency = Частота
 # ==> FpgaFreqTitle =
 #
 # gui/FPGACommander.java
-#
-# ==> FpgaGuiAnnotate =
+FpgaGuiAnnotate = Аннотировать
 # ==> FpgaGuiAnnotationDone =
 # ==> FpgaGuiAnnotationMethod =
 # ==> FpgaGuiBoardSelect =
 # ==> FpgaGuiDownload =
-# ==> FpgaGuiExecute =
 # ==> FpgaGuiExecution =
 # ==> FpgaGuiHdlOnly =
 # ==> FpgaGuiIdle =
 # ==> FpgaGuiMainCircuit =
 # ==> FpgaGuiProgress =
-# ==> FpgaGuiRelabelAll =
-# ==> FpgaGuiRelabelEmpty =
+FpgaGuiRelabelAll = Аннотировать (удалить существующие)
+FpgaGuiRelabelEmpty = Аннотировать компоненты без меток
 # ==> FpgaGuiSettings =
 # ==> FpgaGuiSoftwareSelect =
 # ==> FpgaGuiSyntAndD =
@@ -303,7 +305,7 @@ SEVERE_MSG = ****** СЕРЬЁЗНО ******
 #
 # gui/PartialMapDialog.java
 #
-# ==> FpgaBoardDone =
+FpgaBoardDone = Применить
 # ==> FpgaInputsMap =
 # ==> FpgaIOsMap =
 # ==> FpgaMapTo =
@@ -360,3 +362,33 @@ boardConstrainsFileEmpty = файл проектных ограничений п
 
 fileGeneratedFromSchematics = %s verilog модель сгенерирована из схемы
 fileGeneratedFromVerilogModel = %s использует пользовательскую верилог модель
+
+dockerImage = 1. Docker образ
+targetBoard = 2. Целевая плата
+constrainsFile = 3. Файл проектных ограничений
+clockSettings = 4. Настройки генератора частоты
+annotation = 5. Аннотирование
+action = 6. Действие относительно toplevel схемы
+
+openIOMapper = Открыть окно сопоставления портов
+openConstrainsFile = Редактировать файл ограничений
+
+constrainsCheckBox = Генерировать файл ограничений
+toplevelCheckBox = Генерировать TopLevel файл
+
+commanderTitle = LogisimFX - Панель управления пайплайном сборки
+
+fpgaExportFilesItem=Экспортировать verilog файлы
+fpgaGenerateBitFile=Сгенерировать .bit файл
+
+dockerInfoHeader=Об особенностях разработки под ПЛИС в LogisimFX
+dockerInfoBody=Для генерации двоичных файлов используется opensource проект f4pga, который собран в docker-контейнер.\nСоответственно, для генерации .bit файлов на машине должно быть окружение для docker'а и контейнер.\nОригинальный контейнер, собранный специально для LogisimFX можно найти на docker hub : pe3atejlb/logisimfx-f4pga.\nНикто не запрещает использовать кастомные контейнеры для сборки, однако в таком случае, LogifimFX не сможет взять на себя большую часть рутинных операций.\nВам придется самостоятельно распоряжаться экспортированными файлами.\nДля это Вам предоставлен встроенный терминал.\n
+
+FpgaGuiExecute = Выполнить
+FpgaGuiExecute1 = Поехали!
+FpgaGuiExecute2 = Сейчас то не сломается?
+FpgaGuiExecute3 = Экзекуте
+FpgaGuiExecute4 = Опенсорс - не удивляйтесь
+FpgaGuiExecute5 = Собрать .bit is 300$
+
+mapFilter = Карта IO компонентов
