--- a/src/LogisimFX/resources/localization/menu.properties
+++ b/src/LogisimFX/resources/localization/menu.properties
@@ -184,3 +184,4 @@ fpgaOpenConstrainsFile=Open project constrains file
 fpgaExportFilesItem=Export verilog files
 fpgaGenerateBitFile=Generate .bit file
 fpgaUploadToBoard=Upload to the board
+fpgaOpenFPGAToolchainCommander=Open FPGA Toolchain Commander
