--- a/src/LogisimFX/resources/localization/menu_ru.properties
+++ b/src/LogisimFX/resources/localization/menu_ru.properties
@@ -182,3 +182,4 @@ fpgaOpenConstrainsFile=Открыть файл проектных огранич
 fpgaExportFilesItem=Экспортировать verilog файлы
 fpgaGenerateBitFile=Сгенерировать .bit файл
 fpgaUploadToBoard=Загрузить на плату
+fpgaOpenFPGAToolchainCommander = Открыть панель пайплайна сборки
