multiple bug fix

--- a/src/LogisimFX/resources/localization/gui_ru.properties
+++ b/src/LogisimFX/resources/localization/gui_ru.properties
@@ -154,10 +154,10 @@ waveformTab = временная диаграмма
 terminalTab = терминал
 
 titleLayoutEditor = схема
-titleAppearanceEditor = внешний вид:
+titleAppearanceEditor = внешний вид
 titleVhdlCodeEditor = vhdl модель
 titleVerilogCodeEditor = verilog модель
-titleCodeEditor = редактор кода:
+titleCodeEditor = редактор кода
 titleOf =из
 
 dockPinnedItem=Закрепить вкладку
