Added yosys components library base

--- a/src/LogisimFX/resources/localization/std.properties
+++ b/src/LogisimFX/resources/localization/std.properties
@@ -516,3 +516,5 @@ verifierOutput0Tip = Sequence output
 verifierOutput1Tip = Ready output: the verifier has finished its work
 
 pioComponent = Port I/O
+
+stdYosysSpecial = Yosys Special
