Pin type attr refactor

--- a/src/LogisimFX/resources/localization/std.properties
+++ b/src/LogisimFX/resources/localization/std.properties
@@ -61,8 +61,12 @@ freqInvalidMessage = Value is not a valid integer
 pinComponent = Pin
 pinInputName = Input
 pinOutputName = Output
+pinInoutName = Inout
 pinThreeStateAttr = Three-state?
-pinOutputAttr = Output?
+pinTypeAttr = Type
+pinTypeAttrOutput = Output
+pinTypeAttrInput = Input
+pinTypeAttrInout = Inout
 pinPullAttr = Pull Behavior
 pinPullNoneOption = Unchanged
 pinPullUpOption = Pull Up
@@ -70,6 +74,7 @@ pinPullDownOption = Pull Down
 pinLabelLocAttr = Label Location
 pinInputToolTip = Add an input pin
 pinOutputToolTip = Add an output pin
+pinInoutToolTip= Add an inout pin
 pinFrozenTitle = Pin Attached To Supercircuit.
 pinFrozenQuestion = The pin is tied to the supercircuit's state. Create a new circuit state?
 
@@ -491,6 +496,7 @@ nrOfSwitch = Number of Switch
 #
 # io/PortIO.java
 #
+pioComponent = Port I/O
 pioDirection = Port type:
 pioInput = Inputs only
 pioInputs = Inputs %s
@@ -501,20 +507,29 @@ pioOutEnable = Output enable
 pioOutEnables = Output enables %s
 pioOutput = Outputs only
 pioOutputs = Outputs %s
-
+#
+# verifiers/Verifier.java
+#
 verifierLibrary = Verifiers
 verifier = Verifier
-
+stdSequenceWidthAttr = Sequence bit depth
 stdAccessModeAttr = Access mode
 stdEditingMode = Editing mode
 stdProtectionMode = Protection mode
-
-stdSequenceWidthAttr = Sequence bit depth
 
 verifierInputTip = Verifier Input
 verifierOutput0Tip = Sequence output
 verifierOutput1Tip = Ready output: the verifier has finished its work
 
-pioComponent = Port I/O
+#
+# yosys/Verifier.java
+#
+yosysSpecialLibrary = Yosys Special
 
-stdYosysSpecial = Yosys Special
+reduceAndComponent = Reduce And
+stdAWidth = A Width
+stdBWidth = B Width
+stdYWidth = Y Width
+stdASigned = A Signed
+stdBSigned = B Signed
+stdYSigned = Y Signed
