--- a/src/LogisimFX/resources/localization/std_es.properties
+++ b/src/LogisimFX/resources/localization/std_es.properties
@@ -9,7 +9,7 @@ baseLibrary = Base
 #
 # std/StdAttr.java
 #
-stdFacingAttr = Orientación
+stdFacingAttr = Orientaciï¿½n
 stdDataWidthAttr = Bits De Datos
 stdLabelAttr = Etiqueta
 stdLabelFontAttr = Fuente Del Etiquetado
@@ -24,28 +24,27 @@ extenderInputType = Entrada
 
 # std/base/Clock.java
 clockComponent = Reloj
-clockHighAttr = Duración Del Nivel Alto
-clockLowAttr = Duración Del Nivel Bajo
+clockHighAttr = Duraciï¿½n Del Nivel Alto
+clockLowAttr = Duraciï¿½n Del Nivel Bajo
 clockDurationValue = %s Ticks
 clockDurationOneValue = 1 Tick
 freqNegativeMessage = El valor tiene que ser un entero positivo
-freqInvalidMessage = El valor no es un entero válido
+freqInvalidMessage = El valor no es un entero vï¿½lido
 
 # std/base/Pin.java
 pinComponent = Pin
 pinInputName = Entrada
 pinOutputName = Salida
-pinThreeStateAttr = ¿Tres-estados?
-pinOutputAttr = ¿Salida?
+pinThreeStateAttr = ï¿½Tres-estados?
 pinPullAttr = Comportamiento De Pines
 pinPullNoneOption = Invariante 
 pinPullUpOption = Adoptar Nivel Alto
 pinPullDownOption = Adoptar Nivel Bajo
-pinLabelLocAttr = Posición De La Etiqueta
-pinInputToolTip = Añadir pin de entrada
-pinOutputToolTip = Añadir pin de salida
+pinLabelLocAttr = Posiciï¿½n De La Etiqueta
+pinInputToolTip = Aï¿½adir pin de entrada
+pinOutputToolTip = Aï¿½adir pin de salida
 pinFrozenTitle = Pin Asociado Al Supercircuito.
-pinFrozenQuestion = El pin está relacionado con el estado del circuito. ¿Crear un nuevo estado del circuito?
+pinFrozenQuestion = El pin estï¿½ relacionado con el estado del circuito. ï¿½Crear un nuevo estado del circuito?
 
 # std/base/Probe.java
 probeComponent = Ver
@@ -71,17 +70,17 @@ textVertAlignCenterOpt = Centro
 # std/Gates.java
 #
 gatesLibrary = Puertas
-gateSizeAttr = Tamaño De Puerta
+gateSizeAttr = Tamaï¿½o De Puerta
 gateSizeNarrowOpt = Estrecho
 gateSizeWideOpt = Ancho
-gateInputsAttr = Número De Entradas
+gateInputsAttr = Nï¿½mero De Entradas
 # std/Constant.java
 constantComponent = Constante
 constantValueAttr = Valor
 # std/NotGate.java
 notGateComponent = Puerta NOT
 # std/Buffer.java
-bufferComponent = Búffer
+bufferComponent = Bï¿½ffer
 # std/AndGate.java
 andGateComponent = Puerta AND
 # std/NandGate.java
@@ -99,7 +98,7 @@ oddParityComponent = Detector Imparidad
 # std/EvenParityGate.java
 evenParityComponent = Detector Paridad
 # std/ControlledBuffer.java
-controlledBufferComponent = Búffer Controlado
+controlledBufferComponent = Bï¿½ffer Controlado
 controlledInverterComponent = Inversor Controlado
 #
 # std/Memory.java
@@ -107,10 +106,10 @@ controlledInverterComponent = Inversor Controlado
 memoryLibrary = Memoria
 # AbstractFlipFlop.java
 flipFlopClockTip = Entrada de reloj - el estado se actualiza en el flanco de 0 a 1
-flipFlopQTip = Último estado del biestable
-flipFlopNotQTip = Inverso del último estado del biestable
-flipFlopResetTip = Para 1, estado del pin a 0 asíncronamente
-flipFlopPresetTip = Para 1, estado del pin a 1 asíncronamente
+flipFlopQTip = ï¿½ltimo estado del biestable
+flipFlopNotQTip = Inverso del ï¿½ltimo estado del biestable
+flipFlopResetTip = Para 1, estado del pin a 0 asï¿½ncronamente
+flipFlopPresetTip = Para 1, estado del pin a 1 asï¿½ncronamente
 # std/DFlipFlop.java
 dFlipFlopComponent = Biestable D
 # std/TFlipFlop.java
@@ -121,10 +120,10 @@ jkFlipFlopComponent = Biestable J-K
 srFlipFlopComponent = Biestable S-R
 # std/Register.java
 registerComponent = Registro
-registerQTip = Último valor de salida
+registerQTip = ï¿½ltimo valor de salida
 registerDTip = Valor de entrada - guardado con el flanco de subida
 registerClkTip = Reloj - el valor se actualiza en el flanco de 0 a 1 
-registerClrTip = Clear - Los pins a 1 se ponen a 0 asíncronamente
+registerClrTip = Clear - Los pins a 1 se ponen a 0 asï¿½ncronamente
 # std/RomFactory.java
 romComponent = ROM
 romContentsAttr = Contenidos
@@ -137,24 +136,24 @@ ramAddrLabel = A
 ramCSLabel = sel
 ramOELabel = out
 ramClrLabel = clr
-ramAddrWidthAttr = Número De Bits De Dirección
-ramDataWidthAttr = Número De Bits De Datos
+ramAddrWidthAttr = Nï¿½mero De Bits De Direcciï¿½n
+ramDataWidthAttr = Nï¿½mero De Bits De Datos
 ramKilobyteLabel = %sKB RAM
 ramByteLabel = %sB RAM
 romKilobyteLabel = %sKB ROM
 romByteLabel = %sB ROM
 memDataTip = Entrada o salida de datos de memoria
-memAddrTip = Entrada de dirección de memoria
-memCSTip = Selección de chip - 0 deshabilita el componente
+memAddrTip = Entrada de direcciï¿½n de memoria
+memCSTip = Selecciï¿½n de chip - 0 deshabilita el componente
 ramWETip = Reloj - valor de memoria se actualiza en el flanco de 0 a 1 
 ramOETip = Salida permitida - si 1, se leen datos; si 0, se escriben datos con reloj
-ramClrTip = Clear - pins a 1 se ponen a 0 asíncronamente
+ramClrTip = Clear - pins a 1 se ponen a 0 asï¿½ncronamente
 ramEditMenuItem = Editar Contenidos...
 ramClearMenuItem = Borrar Contenidos
 ramLoadMenuItem = Cargar Imagen...
 ramSaveMenuItem = Salvar Imagen...
 ramConfirmClearTitle = Confirmar Borrar
-ramConfirmClearMsg = ¿Está seguro de que desea resetear "zero out" la memoria?
+ramConfirmClearMsg = ï¿½Estï¿½ seguro de que desea resetear "zero out" la memoria?
 ramLoadDialogTitle = Cargar Imagen RAM
 ramSaveDialogTitle = Salvar Imagen RAM
 ramLoadErrorTitle = Error Al Cargar
@@ -164,20 +163,20 @@ ramSaveErrorTitle = Error Al Salvar
 #
 plexerLibrary = Plexores
 plexerSelectBitsAttr = Seleccionar Bits
-plexerThreeStateAttr = ¿Tercer Estado?
+plexerThreeStateAttr = ï¿½Tercer Estado?
 # std/Multiplexer.java
 multiplexerComponent = Multiplexor
-multiplexerSelectTip = Seleccionar índice de entrada
+multiplexerSelectTip = Seleccionar ï¿½ndice de entrada
 multiplexerInTip = Entrada %s
 multiplexerOutTip = Salida del multiplexor
 # std/Demultiplexer.java
 demultiplexerComponent = Demultiplexor
-demultiplexerSelectTip = Seleccionar índice de salida
+demultiplexerSelectTip = Seleccionar ï¿½ndice de salida
 demultiplexerInTip = Entrada del demultiplexor
 demultiplexerOutTip = Salida %s
 # std/Decoder.java
 decoderComponent = Decodficador
-decoderSelectTip = Seleccionar índice de salida
+decoderSelectTip = Seleccionar ï¿½ndice de salida
 decoderOutTip = Salida %s
 # std/BitSelector.java
 bitSelectorComponent = Selector De Bit
@@ -190,7 +189,7 @@ priorityEncoderInTip = Entrada %s
 #
 # arith/Arithmetic.java
 #
-arithmeticLibrary = Aritmética
+arithmeticLibrary = Aritmï¿½tica
 # arith/Adder.java
 adderComponent = Sumador
 # arith/Subtractor.java
@@ -205,20 +204,20 @@ dividerRemainderOutput = resto
 negatorComponent = Negador
 # arith/Comparator.java
 comparatorComponent = Comparador
-comparatorType = Tipo Numérico
+comparatorType = Tipo Numï¿½rico
 unsignedOption = Sin Signo
 twosComplementOption = 2's Complemento
 #
 # io
 #
-ioBitWidthAttr = Número De Bits
+ioBitWidthAttr = Nï¿½mero De Bits
 ioLabelCenter = Centro
-ioLabelLocAttr = Posición De La Etiqueta
+ioLabelLocAttr = Posiciï¿½n De La Etiqueta
 # io/Io.java
 #ioLibrary = Input/Output
 ioLabelCenter = Centro
 #ioColorAttr = Color
-ioLabelLocAttr = Posición De La Etiqueta
+ioLabelLocAttr = Posiciï¿½n De La Etiqueta
 #ioLabelColorAttr = Label Color
 # io/Button.java
 #buttonComponent = Button
