--- a/src/LogisimFX/resources/localization/std_ru.properties
+++ b/src/LogisimFX/resources/localization/std_ru.properties
@@ -63,7 +63,10 @@ pinComponent= Контакт
 pinInputName= Вход
 pinOutputName= Выход
 pinThreeStateAttr= Три состояния?
-pinOutputAttr= Выход?
+pinTypeAttr = Тип
+pinTypeAttrOutput = Выход
+pinTypeAttrInput = Вход
+pinTypeAttrInout = Двунаправленный
 pinPullAttr= Обращение с плавающими
 pinPullNoneOption= Не менять
 pinPullUpOption= Повышать
@@ -71,6 +74,7 @@ pinPullDownOption= Понижать
 pinLabelLocAttr= Направление метки
 pinInputToolTip= Добавить входной контакт
 pinOutputToolTip= Добавить выходной контакт
+pinInoutToolTip= Добавить двунаправленный контакт
 pinFrozenTitle= Контакт подключен к надсхеме.
 pinFrozenQuestion= Значение на контакте привязано к состоянию надсхемы. Создать новое состояние схемы?
 
@@ -199,6 +203,7 @@ counterResetTip= Очистка: когда 1, асинхронно сбрасы
 counterCarryTip= Перенос: 1, когда значение достигает максимума (минимума при уменьшении)
 counterEnableLabel= ct
 counterLabel= ctr
+counterUpDownTip=counterUpDownTip = Вверх вниз: когда 1, увеличение счетчика, когда 0, уменьшение счетчика
 # std/DFlipFlop.java
 dFlipFlopComponent= D триггер
 # std/TFlipFlop.java
@@ -382,7 +387,7 @@ shiftLogicalLeft= Логический левый
 shiftLogicalRight= Логический правый
 shiftArithmeticRight= Арифметический правый
 shiftRollLeft= Циклический левый
-shiftRollRight= Логический правый
+shiftRollRight= Циклический правый
 shifterDistanceTip= Дистанция: на сколько сдвигать входное значение
 shifterInputTip= Вход: биты для сдвига
 shifterOutputTip= Выход: результат сдвига входного значения
@@ -415,6 +420,9 @@ ioLabelColorAttr= Цвет метки
 ioActiveAttr= Активен при единице?
 # io/Button.java
 buttonComponent= Кнопка
+buttonPressAttr=Логическая 1
+buttonPressActive=1 при нажатии
+buttonPressPassive=1 в покое
 # io/Joystick.java
 joystickComponent= Джойстик
 # io/Keyboard.java
@@ -486,6 +494,7 @@ nrOfSwitch = Количество переключателей
 #
 # io/PortIO.java
 #
+pioComponent = Порт I/O
 pioDirection = Направление порта
 pioInput = Вход
 pioInputs = Входы
@@ -496,24 +505,28 @@ pioOutEnable = Выход включён
 pioOutEnables = Управление выходами
 pioOutput = Выход
 pioOutputs = Выходы
-
+#
+# verifiers/Verifier.java
+#
 verifierLibrary = Верификаторы
 verifier = Верификатор
-
 stdAccessModeAttr = Режим доступа
 stdEditingMode = Режим редактирования
 stdProtectionMode = Режим защиты
-
 stdSequenceWidthAttr = Разрядность последовательности
-
 verifierInputTip = Вход верификатора
 verifierOutput0Tip = Выход последовательности
 verifierOutput1Tip = Ready output: верификатор закончил работу
-counterUpDownTip=counterUpDownTip = Вверх вниз: когда 1, увеличение счетчика, когда 0, уменьшение счетчика
-buttonPressAttr=Логическая 1
-buttonPressActive=1 при нажатии
-buttonPressPassive=1 в покое
-
-pioComponent = Порт I/O
-
+#
+# yosys/Verifier.java
+#
 stdYosysSpecial = Yosys RTL-Элементы
+
+reduceAndComponent = Редукционное И
+
+stdAWidth = Разрядность A
+stdBWidth = Разрядность B
+stdYWidth = Разрядность Y
+stdASigned = A Знаковое
+stdBSigned = B Знаковое
+stdYSigned = Y Знаковое
