Added options to FPGA Commander

--- a/src/LogisimFX/resources/localization/fpga.properties
+++ b/src/LogisimFX/resources/localization/fpga.properties
@@ -407,8 +407,9 @@ fpgaGenerateBitFile=Generate .bit file
 commanderTitle = LogisimFX - FPGA toolchain commander
 
 dockerInfoHeader=About LogisimFX FPGA pipline
-dockerInfoBody=To generate binary files, the open source project f4pga is used, which is assembled into a docker container.\nAccordingly, for generation .bat files on the machine must have an environment for the docker and a container.\nThe original container, assembled specifically for LogisimFX, can be found on docker hub : pe3atejlb/logisimfx-f4pga.\nNo one forbids using custom containers for assembly, however, in this case, LogifimFX will not be able to take over most of the routine operations.\nYou will have to manage the exported files yourself.\nFor this, you are provided with a built-in terminal.
+dockerInfoBody=LogisimFX use's opensource toolchain F4PGA to generate bitfiles, which is assembled into a docker container.\nSo, docker environment must be installed on the machine.\nNecessary docker images will be downloaded automatically\nThe original containers, assembled specifically for LogisimFX, can be found on docker hub : pplosstudio/logisimfx-f4pga.\nNo one forbids using custom containers for assembly, however, in this case, LogisimFX will not be able to take over most of the routine operations.\nYou will have to manage the exported files yourself.\nFor this, you are provided with a built-in terminal.
 
+FpgaUsingDockerToolbox = I am using Windows 7 + Docker Toolbox
 
 FpgaGuiExecute = Execute
 FpgaGuiExecute1 = Execute
