--- a/src/LogisimFX/resources/localization/fpga_ru.properties
+++ b/src/LogisimFX/resources/localization/fpga_ru.properties
@@ -382,13 +382,14 @@ fpgaExportFilesItem=Экспортировать verilog файлы
 fpgaGenerateBitFile=Сгенерировать .bit файл
 
 dockerInfoHeader=Об особенностях разработки под ПЛИС в LogisimFX
-dockerInfoBody=Для генерации двоичных файлов используется opensource проект f4pga, который собран в docker-контейнер.\nСоответственно, для генерации .bit файлов на машине должно быть окружение для docker'а и контейнер.\nОригинальный контейнер, собранный специально для LogisimFX можно найти на docker hub : pe3atejlb/logisimfx-f4pga.\nНикто не запрещает использовать кастомные контейнеры для сборки, однако в таком случае, LogifimFX не сможет взять на себя большую часть рутинных операций.\nВам придется самостоятельно распоряжаться экспортированными файлами.\nДля это Вам предоставлен встроенный терминал.\n
+dockerInfoBody=Для генерации двоичных файлов (.bitfile) используется opensource проект f4pga, который собран в docker-контейнер.\nСоответственно, для генерации .bit файлов на машине должно быть окружение для docker'а.\nеобходимые образы для контейнеров будут скачаны автоматически\nОригинальные контейнеры, собранный специально для LogisimFX можно найти на docker hub : pplosstudio/logisimfx-f4pga.\nНикто не запрещает использовать кастомные контейнеры для сборки, однако, в таком случае, LogifimFX не сможет взять на себя большую часть рутинных операций.\nВам придется самостоятельно распоряжаться экспортированными файлами.\nДля это Вам предоставлен встроенный терминал.\n
+
+FpgaUsingDockerToolbox = Я использую Windows 7 + Docker Toolbox
 
 FpgaGuiExecute = Выполнить
 FpgaGuiExecute1 = Поехали!
 FpgaGuiExecute2 = Сейчас то не сломается?
-FpgaGuiExecute3 = Экзекуте
-FpgaGuiExecute4 = Опенсорс - не удивляйтесь
-FpgaGuiExecute5 = Собрать .bit is 300$
+FpgaGuiExecute3 = Опенсорс - не удивляйтесь
+FpgaGuiExecute4 = Собрать .bit is 300$
 
 mapFilter = Карта IO компонентов
