--- a/src/LogisimFX/resources/localization/file_es.properties
+++ b/src/LogisimFX/resources/localization/file_es.properties
@@ -2,20 +2,19 @@
 # lib/LogisimFile.java
 #
 fileDuplicateError = Error duplicando fichero : %s
-defaultProjectName = SinTítulo
-unloadUsedError = El circuito '%s' utiliza componentes de la librería.
-unloadToolbarError = La librería contiene elementos que ya están en la barra de herramientas.
-unloadMappingError = La librería contiene elementos que ya han sido asociados al ratón.
+unloadUsedError = El circuito '%s' utiliza componentes de la librerï¿½a.
+unloadToolbarError = La librerï¿½a contiene elementos que ya estï¿½n en la barra de herramientas.
+unloadMappingError = La librerï¿½a contiene elementos que ya han sido asociados al ratï¿½n.
 #
 # lib/LogisimFileActions.java
 #
-addCircuitAction = Añadir Circuito
+addCircuitAction = Aï¿½adir Circuito
 removeCircuitAction = Eliminar Circuito
 moveCircuitAction = Reordenar Circuitos
-loadLibraryAction = Cargar Librería
-loadLibrariesAction = Cargar Librerías
-unloadLibraryAction = Descargar Librería
-unloadLibrariesAction = Descargar Librería
+loadLibraryAction = Cargar Librerï¿½a
+loadLibrariesAction = Cargar Librerï¿½as
+unloadLibraryAction = Descargar Librerï¿½a
+unloadLibrariesAction = Descargar Librerï¿½a
 setMainCircuitAction = Seleccionar Circuito Principal
 revertDefaultsAction = Restaurar Valores Por Defecto
 #
@@ -26,10 +25,10 @@ jarFileFilter = Archivos Java (*.jar)
 logisimFilter = Proyecto Logisim
 jarFilter = Archivos Java
 fileDescriptorUnknownError = Descriptor desconocido para %s.
-fileDescriptorError = Descriptor de la librería desconocido %s.
-fileTypeError = La librería Logisim contiene un tipo desconocido %s (%s)
-fileBuiltinMissingError = La librería incorporada %s no es válida en esta versión. 
-fileLibraryMissingError = Falta el archivo `%s' requerido por la librería. Por favor seleccione el archivo de la siguiente pantalla.
+fileDescriptorError = Descriptor de la librerï¿½a desconocido %s.
+fileTypeError = La librerï¿½a Logisim contiene un tipo desconocido %s (%s)
+fileBuiltinMissingError = La librerï¿½a incorporada %s no es vï¿½lida en esta versiï¿½n. 
+fileLibraryMissingError = Falta el archivo `%s' requerido por la librerï¿½a. Por favor seleccione el archivo de la siguiente pantalla.
 fileLibraryMissingTitle = Ubicar `%s'
 fileLibraryMissingButton = Seleccionar
 fileLoadCanceledError = Carga cancelada por el usuario. [1]
@@ -38,45 +37,45 @@ fileErrorTitle = Error De Archivo
 fileSaveErrorTitle = No Se Puede Salvar El Archivo
 fileSaveError = No se pudo salvar el archivo: %s
 fileSaveCloseError = No se pudo cerrar el archivo: %s
-fileCircularError = No se puede crear una referencia circular. (El archivo está siendo utilizado por la librería %s.)
+fileCircularError = No se puede crear una referencia circular. (El archivo estï¿½ siendo utilizado por la librerï¿½a %s.)
 unknownLibraryFileError = No existe un archivo que corresponda a %s.
-logisimCircularError = El archivo %s contiene una referencia a sí mismo.
+logisimCircularError = El archivo %s contiene una referencia a sï¿½ mismo.
 logisimLoadError = Error encontrado abriendo %s: %s
 jarNotOpenedError = El archivo JAR no se ha podido abrir.
 jarClassNotFoundError = La clase %s no ha sido encontrada en el archivo JAR.
-jarClassNotLibraryError = `%s' no es un nombre de librería válido.
-jarLibraryNotCreatedError = La librería %s no ha podido ser instanciada.
+jarClassNotLibraryError = `%s' no es un nombre de librerï¿½a vï¿½lido.
+jarLibraryNotCreatedError = La librerï¿½a %s no ha podido ser instanciada.
 #
 # lib/Options.java
 #
-showGridOption = Mostrar Cuadrícula
+showGridOption = Mostrar Cuadrï¿½cula
 printPreviewOption = Imprimir Vista Negra
 showGhostsOption = Mostrar Sombras
 showHaloOption = Mostrar Aureola
 zoomFactorOption = Factor Del Zoom
-simLimitOption = Límite De La Simulación
-simRandomOption = Aleatoriedad De La Simulación
+simLimitOption = Lï¿½mite De La Simulaciï¿½n
+simRandomOption = Aleatoriedad De La Simulaciï¿½n
 #
 # lib/XmlReader.java
 #
-libNameMissingError = falta el nombre de la librería
-libDescMissingError = falta el descriptor de la librería
-libMissingError = librería `%s' no encontrada
+libNameMissingError = falta el nombre de la librerï¿½a
+libDescMissingError = falta el descriptor de la librerï¿½a
+libMissingError = librerï¿½a `%s' no encontrada
 toolNameMissingError = falta el nombre de una herramienta
 #removed toolMissingError = herramienta %s no encontrada
-mappingMissingError = falta el modificador del mapeado del ratón 
-mappingBadError = modificador del mapeado del ratón `%s' inválido
+mappingMissingError = falta el modificador del mapeado del ratï¿½n 
+mappingBadError = modificador del mapeado del ratï¿½n `%s' invï¿½lido
 circNameMissingError = falta el nombre del circuito
 compUnknownError = componente `%s' no encontrado
 compNameMissingError = falta el nombre del componente
-compAbsentError = falta el componente `%s'de la librería `%s'
-compLocMissingError = dirección del componente `%s' no está especificada
-compLocInvalidError = dirección del componente `%s' inválida (%s)
+compAbsentError = falta el componente `%s'de la librerï¿½a `%s'
+compLocMissingError = direcciï¿½n del componente `%s' no estï¿½ especificada
+compLocInvalidError = direcciï¿½n del componente `%s' invï¿½lida (%s)
 wireStartMissingError = no definido comienzo del cable
 wireStartInvalidError = comienzo del cable sin formato
 wireEndMissingError = fin de cable no definido
 wireEndInvalidError = fin de cable sin formato
 attrNameMissingError = falta el nombre del atributo
 #removed attrValueMissingError = falta el valor del atributo para %s
-attrValueInvalidError = el valor del atributo (%s) no es válido para %s
+attrValueInvalidError = el valor del atributo (%s) no es vï¿½lido para %s
 xmlFormatError = XML error de formato : %s
